--- a/public/bysykkel.html
+++ b/public/bysykkel.html
@@ -9,8 +9,10 @@
 <area href="#" alt="Instruksjoner" SHAPE="RECT" COORDS="26,0,140,39" onclick="window.open('http://www.polymath.no/cc/instruksjoner.html','instruksjoner','height=400,width=600,toolbar=no,menubar=no,scrollbars=yes,resizable=yes,location=no,directories=no,status=no');">
 </map>
 
-    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xTXIlB9bJywir8jYNk5Mjl9wd3jThTkKrBs9zrf69CmyP_YV0SZVk2ZnA"
+    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xRvdx7768sqVseDSlZcRbkERFDXXBRvLM268OGHvS6W7RzqY45RicH9bw"
                 type="text/javascript"></script>
+    <!-- script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xTXIlB9bJywir8jYNk5Mjl9wd3jThTkKrBs9zrf69CmyP_YV0SZVk2ZnA"
+                type="text/javascript"></script -->
 
     <script type="text/javascript">
 
