--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,19 @@
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=geometry&sensor=true"></script>
 <script type="text/javascript" src="/javascripts/prototype.js"></script>
 <script type="text/javascript" src="/javascripts/application.js"></script>
 </head>
 <body>
   <div id="map_canvas" style="width:100%; height:100%"></div>
+	<div style="display:none;">
+		<div id="modeControls" class="controls">
+			<div class="control-wrap"><a href="#" class="control zoomed" data-mode="BIKES">Bikes</a></div>
+			<div class="control-wrap"><a href="#" class="control active unzoomed" data-mode="BOTH">Both</a></div>
+			<div class="control-wrap"><a href="#" class="control zoomed" data-mode="LOCKS">Locks</a></div>
+		</div>
+		<div id="locate">Find me</div>
+	</div>
 </body>
 </html>
