--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&libraries=geometry&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xRvdx7768sqVseDSlZcRbkERFDXXBRvLM268OGHvS6W7RzqY45RicH9bw"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&amp;libraries=geometry&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xRvdx7768sqVseDSlZcRbkERFDXXBRvLM268OGHvS6W7RzqY45RicH9bw"></script>
 <script type="text/javascript" src="/javascripts/prototype.js"></script>
 <script type="text/javascript" src="/javascripts/application.js"></script>
 </head>
