--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Bysykkel - Oslo</title>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&amp;libraries=geometry&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xQmsmCjgp4tsWv6DU_b0D9ktiUPWhQPOtrkfsd6WhoAD9RFQQ-3Teayrg"></script>
