--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&amp;libraries=geometry&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xQmsmCjgp4tsWv6DU_b0D9ktiUPWhQPOtrkfsd6WhoAD9RFQQ-3Teayrg"></script>
 <script type="text/javascript" src="/javascripts/prototype.js"></script>
 <script type="text/javascript" src="/javascripts/application.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-23385073-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body>
   <div id="map_canvas" style="width:100%; height:100%"></div>
