--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,27 @@
 <html>
 <head>
 <title>Bysykkel - Oslo</title>
+<!-- Mobile viewport optimization http://goo.gl/b9SaQ -->
+<meta name="HandheldFriendly" content="True">
+<meta name="MobileOptimized" content="320"/>
+<meta name="viewport" content="width=device-width, target-densitydpi=160dpi, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+<!-- Home screen icon  Mathias Bynens http://goo.gl/6nVq0 -->
+<!-- For iPhone 4 with high-resolution Retina display: -->
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/app-icon.png">
+<!-- For first-generation iPad: -->
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/app-icon.png">
+<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+<link rel="apple-touch-icon-precomposed" href="/images/app-icon.png">
+<!-- For nokia devices: -->
+<link rel="shortcut icon" href="/images/app-icon.png">
+
+<!-- Mobile IE allows us to activate ClearType technology for smoothing fonts for easy reading -->
+<meta http-equiv="cleartype" content="on">
+
+
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&amp;libraries=geometry&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xQmsmCjgp4tsWv6DU_b0D9ktiUPWhQPOtrkfsd6WhoAD9RFQQ-3Teayrg"></script>
