Removing control button to switch back to BOTH mode Zooming to required zoom level when switching to BIKES or LOCKS mode

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,6 @@
 <!-- Mobile IE allows us to activate ClearType technology for smoothing fonts for easy reading -->
 <meta http-equiv="cleartype" content="on">
 
-
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true&amp;libraries=geometry&amp;key=ABQIAAAA5k-CDz8hVoLQHnxx88Wu5xQmsmCjgp4tsWv6DU_b0D9ktiUPWhQPOtrkfsd6WhoAD9RFQQ-3Teayrg"></script>
@@ -44,9 +43,9 @@
   <div id="map_canvas" style="width:100%; height:100%"></div>
 	<div style="display:none;">
 		<div id="modeControls" class="controls">
-			<div class="control-wrap"><a href="#" class="control zoomed" data-mode="BIKES">Bikes</a></div>
-			<div class="control-wrap"><a href="#" class="control active" data-mode="BOTH">Both</a></div>
-			<div class="control-wrap"><a href="#" class="control zoomed" data-mode="LOCKS">Locks</a></div>
+			<div class="control-wrap"><a href="#" class="control" data-mode="BIKES">Bikes</a></div>
+<!--			<div class="control-wrap"><a href="#" class="control both active" data-mode="BOTH">Both</a></div>-->
+			<div class="control-wrap"><a href="#" class="control" data-mode="LOCKS">Locks</a></div>
 		</div>
 		<div id="locate">Find me</div>
 	</div>
