--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 <link rel="apple-touch-icon-precomposed" href="/images/app-icon.png">
 <!-- For nokia devices: -->
 <link rel="shortcut icon" href="/images/app-icon.png">
+<link rel="image_src" href="http://bysykkel.heroku.com/images/app-icon.png">
+
 
 <!-- Mobile IE allows us to activate ClearType technology for smoothing fonts for easy reading -->
 <meta http-equiv="cleartype" content="on">
