Updating icon and adding splash image

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<link rel="apple-touch-startup-image" href="/images/splash.png">-->
 
 <!-- Home screen icon  Mathias Bynens http://goo.gl/6nVq0 -->
 <!-- For iPhone 4 with high-resolution Retina display: -->
